metadata/force-app/main/default/objects/CustomName_KHuxX__c/CustomName_KHuxX__c.object-meta.xml
<CustomObject>
    <description>Description_vwqOL</description>
    <label>CustomLabel_rttRW</label>
    <nameField>
        <label>CustomLabel_rttRW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_rttRWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>