metadata/force-app/main/default/objects/CustomName_KHuxX__c/fields/CustomField_ByMQD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ByMQD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRcZQk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>