metadata/force-app/main/default/objects/CustomName_KHuxX__c/fields/CustomField_FJGaN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_FJGaN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddREqE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>